facet-args/tests/snapshots/err__error_nested_struct_with_scalar.snap
---
source: tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ --config simple 
   ·          ───┬──
   ·             ╰── reflection error: Operation failed on shape Config: Type does not support parsing from string
   ╰────
